[gd_scene load_steps=12 format=2]

[ext_resource path="res://Materiais/Imagens/news imagens/menu/menuPrincipalSemBotao.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/menu.gd" type="Script" id=2]
[ext_resource path="res://Materiais/Botões/BotaoClique.png" type="Texture" id=3]
[ext_resource path="res://Materiais/Botões/botão.png" type="Texture" id=4]
[ext_resource path="res://Materiais/Botões/botãoAoClicar.png" type="Texture" id=5]
[ext_resource path="res://Materiais/Sons/MusicaMenuPrincipal.mp3" type="AudioStream" id=6]
[ext_resource path="res://Materiais/fonts/IMPACT.TTF" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=2]
size = 34
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 34
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 34
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 34
use_filter = true
font_data = ExtResource( 7 )

[node name="Sprite" type="Sprite"]
position = Vector2( 180, 320 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="botao1" type="TextureButton" parent="."]
margin_left = -140.0
margin_top = -156.545
margin_right = 133.0
margin_bottom = -52.5454
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 3 )
expand = true

[node name="botao2" type="TextureButton" parent="."]
margin_left = -138.182
margin_top = -18.1818
margin_right = 139.818
margin_bottom = 78.8182
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 3 )
expand = true

[node name="botao3" type="TextureButton" parent="."]
margin_left = -138.0
margin_top = 130.455
margin_right = 140.0
margin_bottom = 230.455
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
expand = true

[node name="botao4" type="TextureButton" parent="."]
margin_left = -145.0
margin_top = 283.455
margin_right = 151.0
margin_bottom = 383.455
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 3 )
expand = true

[node name="Label4" type="Label" parent="."]
margin_left = -145.0
margin_top = 283.0
margin_right = 151.0
margin_bottom = 383.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "INSTRUÇÕES"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = -138.0
margin_top = 130.0
margin_right = 135.0
margin_bottom = 234.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "RANKING"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = -138.0
margin_top = -18.0
margin_right = 140.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "OPÇÕES"
align = 1
valign = 1

[node name="Label" type="Label" parent="."]
margin_left = -140.0
margin_top = -156.0
margin_right = 133.0
margin_bottom = -52.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "COMEÇAR"
align = 1
valign = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="pressed" from="botao1" to="." method="_on_botao1_pressed"]
[connection signal="pressed" from="botao2" to="." method="_on_botao2_pressed"]
[connection signal="pressed" from="botao3" to="." method="_on_botao3_pressed"]
[connection signal="pressed" from="botao4" to="." method="_on_botao4_pressed"]
